# moondream_api

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.nvidia  LICENSE  README.md  docker-compose.build.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
src/: api.py  config.py  exceptions.py  model_downloader.py  ollama_model_mocks.py  routes.py  schemas.py  vision_service.py
